hphp/hack/test/typecheck/fc_enum_cyclic_constraint.php
<?hh // strict

enum E: int as E {}
